--- a/expdj/apps/experiments/templates/experiments/battery_details.html
+++ b/expdj/apps/experiments/templates/experiments/battery_details.html
@@ -177,6 +177,7 @@
                           <td>{{ hit.reward }}</td>
                           <td>
                             {% if edit_permission %}
+                            <a class='btn btn-xs btn-default additional_info' href='{% url 'view_hit' battery.id hit.id %}'> Additional Information</a>
                             <a class='btn btn-xs btn-default' href='{% url 'manage_hit' battery.id hit.id %}'> Manage Hit</a>
                             <a class='btn btn-xs btn-default' href='{% url 'clone_hit' battery.id hit.id %}'> Clone Hit</a>
                             <a class='btn btn-xs btn-default' href='{% url 'expire_hit' hit.id %}' id="expire_hit"> Expire Hit</a>
@@ -243,12 +244,21 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+<div id="hit_detail_modal" class="modal fade" tabindex="-1" role="dialog">
+
+</div>
+
 </div>
 {% endblock %}
 {% block scripts %}
 <script>
-$(document).ready(function() {
 
+$('.additonal_info').on("click", function(e) {
+    alert("is this doing anything");
+    e.preventDefault();
+    //$('#hit_detail_modal').modal("show").load(this.href);
+});
+$(document).ready(function() {
     $('.dropdown-toggle').dropdown()
     $('#battery_table').dataTable({
       responsive: true
@@ -282,7 +292,11 @@ $(document).ready(function() {
     $('#delete_hit').click(function(e) {
       return confirm("Are you sure you want to delete this hit? This operation cannot be undone!");
     });
-} );
+    $('.additional_info').on("click", function(e) {
+        e.preventDefault();
+        $('#hit_detail_modal').modal("show").load(this.href);
+    });
+});
 </script>
 
 </script>
