--- a/expdj/apps/turk/templates/turk/hit_details_modal.html
+++ b/expdj/apps/turk/templates/turk/hit_details_modal.html
@@ -2,10 +2,10 @@
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">Email Authenticated Battery Link</h4>
+            <h4 class="modal-title">Hit Details</h4>
         </div>
         <div class="modal-body">
-            <div class="alert alert-info" role="alert">
+            <div>
                 <table class="table table-condensed table-striped">
                     <tr><th>Battery</th><td>{{ hit.battery }}</td></tr>
                     <tr><th>Owner</th><td>{{ hit.owner }}</td></tr>
